# riskless

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/worflows/: pr.yaml  pull-request.yml
.github/workflows/: check.yml
examples/: concurrent.rs  simple.rs
src/: batch_coordinator.rs  broker.rs  client.rs  coordinator.rs  error.rs  lib.rs  main.rs  segment.rs
src/batch_coordinator/: mod.rs
src/batch_coordinator/simple/: index.rs  mod.rs
src/coordinator/: default_impl.rs  mod.rs  simple.rs
src/messages/: batch_coordinate.rs  commit_batch_request.rs  consume_request.rs  consume_response.rs  delete_record_request.rs  delete_record_response.rs  mod.rs  produce_request.rs  produce_response.rs
src/requests/: consume.rs  mod.rs  produce.rs
src/shared_log_segment/: mod.rs
src/simple_batch_coordinator/: index.rs  mod.rs  simple.rs
src/utils/: mod.rs  request_response.rs
tests/: TESTSUITE.md  broker.rs  dereference.rs
